# dexterity

./: .gitignore  .gitmodules  .rustfmt.toml  Anchor.toml  Cargo.toml  README.md  build.sh  deploy_all.sh  master_program_config.json  test.sh
client/: pyproject.toml  requirements.txt
client/dexterity/: program_ids.py
client/dexterity/codegen/alpha_risk_engine/: __init__.py  accounts.py
client/dexterity/codegen/alpha_risk_engine/instructions/: create_risk_state_account.py  validate_account_health.py  validate_account_liquidation.py
client/dexterity/codegen/alpha_risk_engine/types/: __init__.py  health.py
client/dexterity/codegen/dex/: __init__.py  accounts.py  constants.py
client/dexterity/codegen/dex/instructions/: __init__.py  cancel_order.py  choose_successor.py  claim_authority.py  clear_expired_orderbook.py  consume_orderbook_events.py  deposit_funds.py  initialize_combo.py  initialize_market_product.py  initialize_market_product_group.py  initialize_trader_risk_group.py  instruction_tag.py  new_order.py  remove_market_product.py  sweep_fees.py  transfer_full_position.py  update_product_funding.py  update_trader_funding.py  withdraw_funds.py
client/dexterity/codegen/dex/types/: __init__.py  account_tag.py  action_status.py  bitset.py  call_back_info.py  cancel_order_params.py  clear_expired_orderbook_params.py  combo.py  consume_orderbook_events_params.py  deposit_funds_params.py  dex_error.py  fractional.py  health_info.py  health_result.py  health_status.py  initialize_combo_params.py  initialize_market_product_group_params.py  initialize_market_product_params.py  leg.py  liquidation_info.py  market_product_group.py  new_order_params.py  open_orders.py  open_orders_metadata.py  open_orders_node.py  operation_type.py  order_info.py  order_type.py  outright.py  params.py  price_ewma.py  product.py  product_array.py  product_metadata.py  product_status.py  risk_output_register.py  social_loss.py  trader_fee_params.py  trader_fees.py  trader_position.py  (+4 more)
client/dexterity/codegen/instruments/: __init__.py  accounts.py  addrs.py
client/dexterity/codegen/instruments/instructions/: __init__.py  close_derivative_account.py  initialize_derivative.py  initialize_fixed_income.py  instruction_tag.py  settle_derivative.py  settle_fixed_income.py
client/dexterity/codegen/instruments/types/: __init__.py  account_tag.py  derivative_error.py  derivative_metadata.py  (+6 more)
client/dexterity/codegen/noop_risk_engine/: __init__.py
client/dexterity/constant_fees/: actions.py  instructions.py  state.py
client/dexterity/dex/: actions.py  addrs.py  sdk_context.py
client/dexterity/dummy_oracle/: actions.py
client/dexterity/dummy_oracle/instructions/: __init__.py  common.py  initialize_clock.py  initialize_oracle.py  update_clock.py  update_price.py
client/dexterity/dummy_oracle/state/: __init__.py  clock.py  common.py  oracle_price.py
client/dexterity/instruments/: actions.py
client/dexterity/instruments/instructions/: __init__.py  initialize_derivative.py  initialize_fixed_income.py
client/dexterity/risk/: actions.py
client/dexterity/scripts/: build  discriminant.py  extract_program_ids.py  generate_code.py  get_trader_risk_groups_key.py  keypair_to_b58.py  start_test_validator.py
client/dexterity/utils/: __init__.py  random_hash.py  solana.py
client/dexterity/utils/aob/: __init__.py  instructions.py
dexteritysdk/: Cargo.toml
dexteritysdk/src/: admin.rs  bootstrap.rs  context.rs  lib.rs  sdk_client.rs  state.rs  trader.rs
dexteritysdk/src/common/: mod.rs  utils.rs
dexteritysdk/src/instrument/: initialize_derivative.rs  mod.rs  settle_derivative.rs
dexteritysdk/src/oracle/: create_clock.rs  create_oracle.rs  mod.rs  update_clock.rs  update_oracle.rs
dexteritysdk/src/processor/: cancel_order.rs  clear_expired_orderbook.rs  combo.rs  consume_orderbook_events.rs  deposit_funds.rs  fees.rs  market_product.rs  market_product_group.rs  mod.rs  new_order.rs  orderbook.rs  remove_market_product.rs  trader_risk_group.rs  transfer_full_position.rs  update_product_funding.rs  update_trader_funding.rs
programs/dex/: Cargo.toml
programs/dex/src/: error.rs  lib.rs
programs/dex/src/processor/: cancel_order.rs  change_authority.rs  clear_expired_orderbook.rs  consume_orderbook_events.rs  create_market.rs  deposit_funds.rs  initialize_combo.rs  initialize_market_product.rs  initialize_market_product_group.rs  initialize_trader_risk_group.rs  mod.rs  new_order.rs  remove_market_product.rs  sweep_fees.rs  transfer_full_position.rs  update_product_funding.rs  update_trader_funding.rs  withdraw_funds.rs
programs/dex/src/state/: callback_info.rs  constants.rs  enums.rs  fee_model.rs  market_product_group.rs  mod.rs  open_orders.rs  products.rs  risk_engine_register.rs  trader_risk_group.rs
programs/dex/src/utils/: bitset.rs  cpi.rs  loadable.rs  logs.rs  mod.rs  numeric.rs  orderbook.rs  param.rs  validation.rs
programs/dex/tests/: setup.rs  test_alpha_risk_engine.rs  test_combo_alpha_risk_engine.rs  test_combo_orders.rs  test_expiration.rs  test_funding.rs  test_new_order_rounding_logic.rs  test_no_negative_order_size.rs  test_orderbook_layering.rs  test_replace_trader_position.rs  test_self_trade.rs  test_simple_trade.rs  test_sweep_fees.rs
programs/dummy-oracle/: Cargo.toml
programs/dummy-oracle/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
programs/dummy-oracle/src/processor/: initialize_clock.rs  initialize_oracle.rs  update_clock.rs  update_price.rs
programs/fees/constant-fees/: Cargo.toml
programs/fees/constant-fees/src/: lib.rs
programs/instruments/: Cargo.toml
programs/instruments/src/: error.rs  lib.rs  oracle.rs
programs/instruments/src/processor/: close_derivative_account.rs  initialize_derivative.rs  mod.rs  settle_derivative.rs
programs/instruments/src/state/: constants.rs  derivative_metadata.rs  enums.rs  mod.rs
programs/risk/alpha-risk-engine/: Cargo.toml
programs/risk/alpha-risk-engine/src/: lib.rs
programs/risk/noop-risk-engine/: Cargo.toml
programs/risk/noop-risk-engine/src/: lib.rs
(+10 files in other folders)
