[workspace]
resolver = "2"
members = [
    "programs/instruments",
    "programs/dex",
    "programs/agnostic-orderbook/program",
    "programs/dummy-oracle",
    "programs/risk/*",
    "programs/fees/*"
]

exclude = [
    "dexteritysdk",
]

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[profile.dev]
split-debuginfo = "unpacked"
