[tool.poetry]
name = "dexterity"
version = "0.1.0"
description = "Client for Dexterity - a modular derivatives decentralized exchange reference implementation"
authors = ["Joe Howarth <josephehowarth@gmail.com>"]

[tool.poetry.scripts]
generate-code = "dexterity.scripts.generate_code:main"
local-validator = "dexterity.scripts.start_test_validator:main"
keypair-to-b58 = "dexterity.scripts.keypair_to_b58:main"
extract-program-ids = "dexterity.scripts.extract_program_ids:main"
get-trader-risk-groups = "dexterity.scripts.get_trader_risk_groups:main"
discriminant = "dexterity.scripts.discriminant:main"
bootstrap = "dexterity.bots.bootstrap:main"
connect = "dexterity.bots.new_connect:main"

[tool.poetry.dependencies]
python = "^3.9"
solana = "^0.19"
aiodns = "^3.0.0"
aiohttp = "^3.8.1"
aiosignal = "^1.2.0"
anyio = "^3.5.0"
appnope = "^0.1.2"
argon2-cffi = "^21.3.0"
async-timeout = "^4.0.2"
attrs = "^21.4.0"
backcall = "^0.2.0"
backoff = "^1.11.1"
base58 = "^2.1.1"
bleach = "^4.1.0"
certifi = "^2021.10.8"
cffi = "^1.15.0"
charset-normalizer = "^2.0.12"
construct = "^2.10.67"
construct-typing = "^0.5.2"
cryptography = "^36.0.1"
cycler = "^0.11.0"
debugpy = "^1.5.1"
decorator = "^5.1.1"
defusedxml = "^0.7.1"
dnspython = "^2.2.0"
entrypoints = "^0.4"
flake8 = "^4.0.1"
frozenlist = "^1.3.0"
idna = "^3.3"
ipykernel = "^6.9.0"
ipython = "^8.0.1"
ipython_genutils = "^0.2.0"
ipywidgets = "^7.6.5"
jedi = "^0.18.1"
Jinja2 = "^3.0.3"
jsonrpcclient = "^4.0.2"
jsonrpcserver = "^5.0.6"
jupyter = "^1.0.0"
jupyter-client = "^7.1.2"
jupyter-console = "^6.4.0"
jupyter-core = "^4.9.1"
jupyterlab-pygments = "^0.1.2"
jupyterlab-widgets = "^1.0.2"
kiwisolver = "^1.3.2"
loguru = "^0.6.0"
MarkupSafe = "^2.0.1"
matplotlib = "^3.5.1"
matplotlib-inline = "^0.1.3"
mistune = "0.8.4"
multidict = "^6.0.2"
nbclient = "^0.5.10"
nbformat = "^5.1.3"
nest-asyncio = "^1.5.4"
notebook = "^6.4.8"
numpy = "^1.22.2"
OSlash = "^0.6.3"
packaging = "^21.3"
pandas = "^1.4.1"
pandocfilters = "^1.5.0"
parso = "^0.8.3"
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
Pillow = "^9.0.1"
prometheus-client = "^0.13.1"
prompt-toolkit = "^3.0.28"
ptyprocess = "^0.7.0"
pycares = "^4.1.2"
pycodestyle = "^2.8.0"
pycparser = "^2.21"
pyflakes = "^2.4.0"
Pygments = "^2.11.2"
PyNaCl = "^1.5.0"
pyparsing = "^3.0.7"
pyrsistent = "^0.18.1"
pythclient = "^0.0.2"
python-dateutil = "^2.8.2"
pytz = "^2021.3"
pyzmq = "^22.3.0"
qtconsole = "^5.2.2"
QtPy = "^2.0.1"
requests = "^2.27.1"
Send2Trash = "^1.8.0"
six = "^1.16.0"
sniffio = "^1.2.0"
terminado = "^0.13.1"
testpath = "^0.5.0"
tornado = "^6.1"
traitlets = "^5.1.1"
types-cachetools = "^4.2.9"
urllib3 = "^1.26.8"
wcwidth = "^0.2.5"
webencodings = "^0.5.1"
websockets = "^10.1"
widgetsnbextension = "^3.5.2"
yarl = "^1.7.2"
h11 = "0.12.0"
typing-extensions = "3.10.0.2"
rfc3986 = "1.5"
nbconvert = "6.2"
mccabe = "0.6.1"
jsonschema = "3.2.0"
argparse = "^1.4.0"
solmate = {git = "https://github.com/nimily/solmate.git", rev = "stable"}
podite = "^0.1.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
