[package]
edition = "2021"
name = "dexteritysdk"
version = "0.1.0"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
agnostic-orderbook = { version = "0.1.0", path = "../programs/agnostic-orderbook/program", features = ["no-entrypoint"] }
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
anchor-client = "0.24.2"
bonfida-utils = "0.2"
dex = { path = "../programs/dex" }
alpha-risk-engine = { path = "../programs/risk/alpha-risk-engine", features = ["no-entrypoint"] }
instruments = { path = "../programs/instruments", features = ["no-entrypoint"] }
dummy-oracle = { path = "../programs/dummy-oracle", features = ["no-entrypoint"] }
arrayref = "0.3.6"
base64 = "0.13.0"
borsh = "0.9"
arrayvec = "0.7.2"
shellexpand = "2.1.0"
bytemuck = { version = "1.7.2", features = ["derive"] }
constant-fees = { path = "../programs/fees/constant-fees", features = ["no-entrypoint"] }
itertools = "0.10.3"
noop-risk-engine = { path = "../programs/risk/noop-risk-engine", features = ["no-entrypoint"] }
pyth-client = "0.3.0"
solana-program = "1.8.12"
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
thiserror = "1.0"
num-traits = "0.2.14"
num-derive = "0.3"
num = "0.4"
hexdump = "0.1.0"
rand = "0.8.4"
solana-logger = "1.9.4"
solana-program-test = "1.9.4"
solana-sdk = "1.9.4"
solana-client = "1.9.4"
async-trait = "0.1.52"
tokio = { version = "1.6", features = ["macros"] }
anyhow = "1.0.52"
bincode = "1.3.3"
serde = "1.0.133"
derive_more = "0.99.17"
serde_json = "1.0.78"
futures = "0.3.21"

[lib]
crate-type = ["cdylib", "lib"]