[package]
edition = "2021"
name = "dex"
version = "0.1.0"
resolver = "2"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
test-bpf = []

[dependencies]
agnostic-orderbook = { version = "0.1.0", path = "../agnostic-orderbook/program", features = ["no-entrypoint"] }
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
arrayref = "0.3.6"
base64 = "0.13.0"
bonfida-utils = "0.2"
borsh = "0.9"
bytemuck = { version = "1.7.2", features = ["derive"] }
pyth-client = "0.3.0"
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
thiserror = "1.0"
num-traits = "0.2.14"
num-derive = "0.3"
num = "0.4"
itertools = "0.10.3"
serde = "1.0.136"
serde-big-array = { version = "0.3.2", features = ["const-generics"] }


[dev-dependencies]
solana-sdk = "1.9.4"
anchor-client = "0.24.2" 
constant-fees = { path = "../fees/constant-fees", features = ["no-entrypoint"] }
noop-risk-engine = { path = "../risk/noop-risk-engine", features = ["no-entrypoint"] }
dexteritysdk = { path = "../../dexteritysdk" }
alpha-risk-engine = { path = "../risk/alpha-risk-engine", features = ["no-entrypoint"] }
instruments = { path = "../instruments", features = ["no-entrypoint"] }
dummy-oracle = { path = "../dummy-oracle", features = ["no-entrypoint"] }
arrayref = "0.3.6"
hexdump = "0.1.0"
rand = "0.8.4"
tokio = { version = "1.6", features = ["macros"] }
solana-program = "1.8.12"
solana-program-test = "1.9.4"
bincode = "1.3.3"

[lib]
crate-type = ["cdylib", "lib"]
