[package]
name = "constant-fees"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
anchor-lang = "0.24.2"
dex = { path = "../../dex", features = ["no-entrypoint"] }
solana-program = "1.8.12"
thiserror = "1.0"
arrayref = "0.3.6"
borsh = "0.9"
bytemuck = { version = "1.7.2", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]
