[package]
name = "alpha-risk-engine"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
agnostic-orderbook = { version = "1.0.0", path = "../../agnostic-orderbook/program" }
anchor-lang = "0.24.2"
dex = { path = "../../dex", version = "0.1.0", features = ["no-entrypoint"]}
solana-program = "1.8.12"
thiserror = "1.0"
arrayref = "0.3.6"
borsh = "0.9"

[lib]
crate-type = ["cdylib", "lib"]
