[package]
name = "noop-risk-engine"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
test-bpf = []

[dependencies]
dex = {path = "../../dex", features = ["no-entrypoint"]}
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
solana-program = "1.8.12"
thiserror = "1.0"
arrayref = "0.3.6"
borsh = "0.9"

[dev-dependencies]
anchor-client = "0.24.2" 


[lib]
crate-type = ["cdylib", "lib"]
